--- a/index.html
+++ b/index.html
@@ -6,24 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" 
+integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
 crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/a0e5fcb0d7.js" crossorigin="anonymous"></script>
 <style>
-.foto-perfil {
-    height: 100%;
-    width:auto;
-    max-width: 100%;
-    border-radius: 50%;
+  .foto-perfil {
+      height: 100%;
+      width:auto;
+      max-width: 100%;
+      border-radius: 50%;
 }
+  .corPrimaria {
+    background-color: #18bc9c;
+  }
+  .corSecundaria {
+    background-color: #2c3e50;
+  }
+  p {
+    font-family:Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif ;
+    color: black !important;
+  }
+  .icones{
+    padding-left: 5px;
+  }
+  .titulosBrancos{
+    text-decoration: underline;
+    text-underline-position: below;
+    padding-bottom: 20px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: white
+  }
+  .titulosVerdes{
+    text-decoration: underline;
+    text-underline-position: below;
+    padding-bottom: 20px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color:#18bc9c
+  }
+  .textoBranco{
+    color: white !important
+  }
+  .jumbotron{
+    margin-bottom: 0px;
+  }
+  .textoFooter{
+    margin: 0px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  html {
+    scroll-behavior: smooth;
+  }
 </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Magnum Benevides</a>
+  <!--NavBar-->
+    <nav class="navbar navbar-expand-lg navbar-light corSecundaria">
+        <a class="navbar-brand textoBranco href="#">Magnum Benevides</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,33 +79,36 @@ crossorigin="anonymous"></script>
           </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Projetos</a>
+                <a class="nav-link textoBranco" href="#projetos">Projetos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Sobre mim</a>
+                <a class="nav-link textoBranco" href="#sobre-mim">Sobre mim</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contato</a>
+                <a class="nav-link textoBranco" href="#contato">Contato</a>
             </li>
           </ul>
         </div>
       </nav>
-      <section class="jumbotron text-center">
+      
+      <!--Apresentação-->
+      <section class="jumbotron text-center corPrimaria">
         <div class="container">
             <img class="foto-perfil" src="https://i.ibb.co/qM7fpKG/20160716-230232.jpg" alt="20160716-230232">
-          <h1 class="jumbotron-heading">Magnum Benevides</h1>
-          <p class="lead text-muted">Geofísico - Desenvolvedor - Data Scientist</p>
+          <h1 class="jumbotron-heading textoBranco">Magnum Benevides</h1>
+          <p class="lead textoBranco">Geofísico - Desenvolvedor - Data Scientist</p>
           <p>
-            <a href="#" class="btn btn-dark my-2">Contato</a>
+            <a href="#contato" class="btn btn-dark my-2">Contato</a>
           </p>
-          <a href="https://www.linkedin.com/in/magnumbenevides"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/camagnum"><i class="fab fa-github"></i></a>
-          <a href="https://instagram.com/camagnumrb"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/magnumbenevides"><i class="textoBranco fab fa-linkedin"></i></a>
+          <a href="https://github.com/camagnum"><i class="textoBranco icones fab fa-github"></i></a>
+          <a href="https://instagram.com/camagnumrb"><i class="textoBranco icones fab fa-instagram"></i></a>
         </div>
       </section>4
-      <div class="album py-5 bg-light">
+      <div class="album py-5 bg-light" id="projetos">
         <div class="container">
 
+          <h2 class="jumbotron-heading text-center titulosVerdes">Projetos</h2>
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
@@ -142,11 +190,11 @@ crossorigin="anonymous"></script>
         </div>
       </div>
 
-
-      <section class="jumbotron text-center">
+      <!--Sobre mim-->
+      <section class="jumbotron text-center corPrimaria" id="sobre-mim">
         <div class="container">
-            <h2 class="jumbotron heading">Sobre mim
-                <p class="lead">Olá, meu nome é Magnum! Sou formado em Geofísica e atualmente 
+            <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
+                <p class="lead textoBranco">Olá, meu nome é Magnum! Sou formado em Geofísica e atualmente 
                     mestrando na mesma área. Durante a graduação fui apresentado à programação
                     e imediatamente me apaixonei. Comecei estudando Fortran, depois conheci 
                     o Python e foi com ele que consegui me aprofundar muito mais na área.
@@ -155,23 +203,23 @@ crossorigin="anonymous"></script>
                     processo estudei também banco de dados com o MySQL e um pouco de outras 
                     linguagens como Java, HTML/CSS, Javascript.
                 </p>
-            </h2>
         </div>
       </section>
 
       <!--Contato-->
       <section>
           <div>
-              <div class="container-fluid">
-                  <h3 class="text-center">Disponível para oportunidades</h3>
-                  <h4 class="text-center">magnumbenevides@gmail.com</h4>
+              <div class="container-fluid" id="contato">
+                  <h3 style="padding-top: 40px" class="text-center titulosVerdes">Disponível para oportunidades</h3>
+                  <a href="mailto:magnumbenevides@gmail.com"><h4 style="padding-bottom: 30px;
+                  margin-bottom: 0px;" class="text-center">magnumbenevides@gmail.com</h4></a>
               </div>
           </div>
       </section>
 
       <!--Footer-->
-      <footer class="text-center">
-        <p>Copyright 2022</p>
+      <footer class="text-center corSecundaria" style="margin=0px; padding=0px">
+        <p class="textoFooter textoBranco">Copyright 2022</p>
       </footer>
 </body>
 </html>
