--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ crossorigin="anonymous"></script>
 </style>
 </head>
 <body>
-  <!--NavBar-->
-    <nav class="navbar navbar-expand-lg navbar-light corSecundaria">
+  <!--NavBar Fixo ao Topo-->
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light corSecundaria">
         <a class="navbar-brand textoBranco href="#">Magnum Benevides</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
