--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ crossorigin="anonymous"></script>
           <a href="https://github.com/camagnum"><i class="textoBranco icones fab fa-github"></i></a>
           <a href="https://instagram.com/camagnumrb"><i class="textoBranco icones fab fa-instagram"></i></a>
         </div>
-      </section>4
+      </section>
       <div class="album py-5 bg-light" id="projetos">
         <div class="container">
 
