Inclui arquivo CSS

--- a/index.html
+++ b/index.html
@@ -13,57 +13,8 @@ crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
 crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/a0e5fcb0d7.js" crossorigin="anonymous"></script>
-<style>
-  .foto-perfil {
-      height: 100%;
-      width:auto;
-      max-width: 100%;
-      border-radius: 50%;
-}
-  .corPrimaria {
-    background-color: #18bc9c;
-  }
-  .corSecundaria {
-    background-color: #2c3e50;
-  }
-  p {
-    font-family:Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif ;
-    color: black !important;
-  }
-  .icones{
-    padding-left: 5px;
-  }
-  .titulosBrancos{
-    text-decoration: underline;
-    text-underline-position: below;
-    padding-bottom: 20px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: white
-  }
-  .titulosVerdes{
-    text-decoration: underline;
-    text-underline-position: below;
-    padding-bottom: 20px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color:#18bc9c
-  }
-  .textoBranco{
-    color: white !important
-  }
-  .jumbotron{
-    margin-bottom: 0px;
-  }
-  .textoFooter{
-    margin: 0px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-  }
-  html {
-    scroll-behavior: smooth;
-  }
-</style>
+<link rel="stylesheet" type="text/css"
+href="mystyle.css" />
 </head>
 <body>
   <!--NavBar Fixo ao Topo-->
@@ -94,7 +45,7 @@ crossorigin="anonymous"></script>
       <!--Apresentação-->
       <section class="jumbotron text-center corPrimaria">
         <div class="container">
-            <img class="foto-perfil" src="https://i.ibb.co/qM7fpKG/20160716-230232.jpg" alt="20160716-230232">
+            <img class="foto-perfil" style="border-radius: 50%;" src="https://i.ibb.co/qM7fpKG/20160716-230232.jpg" alt="20160716-230232">
           <h1 class="jumbotron-heading textoBranco">Magnum Benevides</h1>
           <p class="lead textoBranco">Geofísico - Desenvolvedor - Data Scientist</p>
           <p>
