--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Portfolio</title>
+    <meta name="description" content="Site portfólio de Carlos Magnum Ribeiro Benevides"
+    <title>Portfolio - Carlos Magnum Benevides</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" 
 integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
@@ -13,13 +14,13 @@ crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
 crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/a0e5fcb0d7.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" type="text/css"
-href="mystyle.css" />
+<link rel="stylesheet" type="text/css" href="mystyle.css" />
 </head>
+
 <body>
   <!--NavBar Fixo ao Topo-->
     <nav class="navbar navbar-expand-lg fixed-top navbar-light corSecundaria">
-        <a class="navbar-brand textoBranco href="#">Magnum Benevides</a>
+        <a class="navbar-brand textoBranco" href="#topo">Magnum Benevides</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -42,10 +43,10 @@ href="mystyle.css" />
         </div>
       </nav>
       
-      <!--Apresentação-->
-      <section class="jumbotron text-center corPrimaria">
+      <!-- Apresentação -->
+      <section class="jumbotron text-center corPrimaria" id="topo">
         <div class="container">
-            <img class="foto-perfil" style="border-radius: 50%;" src="https://i.ibb.co/qM7fpKG/20160716-230232.jpg" alt="20160716-230232">
+            <img class="foto-perfil" src="https://i.ibb.co/qM7fpKG/20160716-230232.jpg" alt="20160716-230232">
           <h1 class="jumbotron-heading textoBranco">Magnum Benevides</h1>
           <p class="lead textoBranco">Geofísico - Desenvolvedor - Data Scientist</p>
           <p>
@@ -56,7 +57,9 @@ href="mystyle.css" />
           <a href="https://instagram.com/camagnumrb"><i class="textoBranco icones fab fa-instagram"></i></a>
         </div>
       </section>
-      <div class="album py-5 bg-light" id="projetos">
+
+      <!-- Projetos -->
+      <div class="album py-5 bg-light" style="background-color: white !important;" id="projetos">
         <div class="container">
 
           <h2 class="jumbotron-heading text-center titulosVerdes">Projetos</h2>
@@ -64,7 +67,7 @@ href="mystyle.css" />
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;
-                bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]"
+                bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Exemplo Conversor-YouTube"
                 style="height: 225px; width: 100%; display: block;" src="https://i.ibb.co/NpGkb2M/conversor-yt.png"
                 data-holder-rendered="true">
                 <div class="card-body">
