--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site portfólio de Carlos Magnum Ribeiro Benevides"
-    <title>Portfolio - Carlos Magnum Benevides</title>
+    <title> Portfolio - Carlos Magnum Benevides</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" 
 integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
@@ -172,7 +172,7 @@ crossorigin="anonymous"></script>
       </section>
 
       <!--Footer-->
-      <footer class="text-center corSecundaria" style="margin=0px; padding=0px">
+      <footer class="text-center corSecundaria" style="margin:0px; padding:0px">
         <p class="textoFooter textoBranco">Copyright 2022</p>
       </footer>
 </body>
